Fix some spacing in verification results

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,7 +19,8 @@
 }
 
 .MuiTypography-h4 {
-	font-size: 1rem;
+	font-size: .9rem;
+	line-height: 22px;
 }
 
 .MuiTypography-body2 {
